fix toggle-lang btn padding on mobile

--- a/app/components/header/index.css
+++ b/app/components/header/index.css
@@ -70,6 +70,7 @@
 .header__toggle-language-btn span {
   text-transform: uppercase !important;
   font-size: 13px !important;
+  padding: 0 10px !important;
 }
 
 .header__icon-menu {
